--- a/frontend-2/index.html
+++ b/frontend-2/index.html
@@ -18,11 +18,12 @@
             </div>
             <div class="navlinks">
                 <a href="#">HOME</a>
-                <a href="#">PROCESS</a>
-                <a href="#">ABOUT US</a>
-                <a href="#">SERVICES</a>
+                <a href="#process">PROCESS</a>
+                <a href="#aboutus">ABOUT US</a>
+                <a href="#services">SERVICES</a>
                 <a href="#">TESTIMONIALS</a>
-                <a href="#">CONTACT</a>
+                <a href="#contact">CONTACT</a>
+                <span></span>
             </div>
 
         </div>
@@ -35,11 +36,11 @@
             <h1>Social Network <br>Management</h1>
             <button>MORE INFO</button>
         </div>
-        <img class="social-media-pic" src="pictures/Mobile ux concept illustration _ Free Vector.jpg">
+        <img src="pictures/Mobile ux concept illustration _ Free Vector.jpg">
 
     </div>
 
-    <div class="process">
+    <div id="process" class="process">
         <p>Our process</p>
         <div class="underline"></div>
 
@@ -67,6 +68,88 @@
         </div>
     </div>
 
+    <div style="margin-top: 70px;" class="process">
+        <p id="aboutus">About us</p>
+        <div class="underline"></div>
+    </div>
+
+    <div class="grid-about-container">
+        <div>
+            <img src="pictures/aboutus.jpg" alt="">
+        </div>
+
+        <div class="About-content">
+            <p style="font-size: 18px; font-family: 'Inter', sans-serif;">Lorem ipsum dolor sit amet consectetur,
+                adipisicing elit. Iusto reiciendis
+                totam, nisi, maiores rerum
+                dolorum aut distinctio placeat omnis earum voluptatibus officiis ullam quos, odit accusantium
+                consequuntur quidem. Hic, deleniti? <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Laudantium est sunt consectetur vero corporis autem illo, voluptate illum quidem quia explicabo mollitia
+                aperiam voluptatum, enim voluptas alias sapiente dolores minima.</p>
+        </div>
+
+    </div>
+
+    <div class="process">
+        <p id="services">Services we offer</p>
+        <div class="underline"></div>
+    </div>
+
+    <div class="grid-services">
+        <div class="flex-content">
+            <img style="width: 600px;" src="pictures/social_media_tree.jpg" alt="">
+            <p style="font-family: 'Inter',sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Expedita eos sequi doloremque cum corporis hic
+                incidunt odio, obcaecati quae voluptas praesentium, nemo quos explicabo cumque non qui recusandae ex
+                nisi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum reiciendis sunt esse, voluptatum
+                omnis laborum perferendis recusandae nam distinctio earum! Voluptate autem, vero voluptatem recusandae
+                consequatur pariatur aliquam eos veniam?
+            </p>
+        </div>
+        <div class="flex-content">
+            <p style="font-family: 'Inter',sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Expedita eos sequi doloremque cum corporis hic
+                incidunt odio, obcaecati quae voluptas praesentium, nemo quos explicabo cumque non qui recusandae ex
+                nisi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum reiciendis sunt esse, voluptatum
+                omnis laborum perferendis recusandae nam distinctio earum! Voluptate autem, vero voluptatem recusandae
+                consequatur pariatur aliquam eos veniam?
+            </p>
+            <img style="width: 500px;" src="pictures/analyse.jpg" alt="">
+        </div>
+        <div class="flex-content">
+            <img style="width: 600px;" src="pictures/increase_followers.jpg" alt="">
+            <p style="font-family: 'Inter',sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Expedita eos sequi doloremque cum corporis hic
+                incidunt odio, obcaecati quae voluptas praesentium, nemo quos explicabo cumque non qui recusandae ex
+                nisi. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum reiciendis sunt esse, voluptatum
+                omnis laborum perferendis recusandae nam distinctio earum! Voluptate autem, vero voluptatem recusandae
+                consequatur pariatur aliquam eos veniam?
+            </p>
+        </div>
+    </div>
+
+    <div style="margin-top: 70px;" class="process">
+        <p id="contact">I Need More Info</p>
+        <div class="underline"></div>
+    </div>
+
+    <fieldset>
+        <form action="">
+            <div class="email-form">
+                <input placeholder="    Insert your email" type="email">
+                <button class="btn-send">Send</button>
+            </div>
+        </form>
+    </fieldset>
+
+    <footer style="background-color: rgb(183, 158, 158); height: 100px;">
+
+        <p style="color: rgb(3, 3, 3); text-align: center;">
+            <br><br>Copyrights &copy;2019 TailwindComponents. All rights reserved, | illustrations by <a
+                class="footer-link" href="">Freepik</a> |
+            Awstars <a class="footer-link" href="">UI Faces</a>
+        </p>
+    </footer>
 </body>
 
 </html>
