terminer Front-end3

--- a/frontend-3/index.html
+++ b/frontend-3/index.html
@@ -29,47 +29,74 @@
     </nav>
 
     <div class="movie-flex">
-        <div class="flex-content">
+        <div class="flex-content" id="describe">
             <H1>Squid Game</H1>
             <p>⭐7.3 | 2598 2h35 . Action, Adventure, Drama . 2021 <br></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores natus dicta odio nam pariatur neque
-                possimus
-                molestias cumque itaque, deleniti error quaerat in libero. Ipsum eos nisi eaque nostrum provident.
+            <p>Criblés de dettes, 456 participants reçoivent une étrange invitation : participer à une série de jeux
+                pour enfants. En jeu, 45,6 milliards de wons. Mais derrière chaque épreuve apparemment innocente se
+                cache un enjeu mortel. Face à des adversaires tout aussi désespérés, chaque décision peut être fatale.
+                Entre tension, drame et critique sociale, Squid Game révèle jusqu'où l’humain est prêt à aller pour
+                survivre.
             </p>
 
             <br>
             <br>
 
-            <button>Play</button>
-            <button>Trailer</button>
+            <button id="btn-play"><i class="fa-solid fa-play"></i> Play</button>
+            <button id="btn-trailer">Trailer</button>
         </div>
 
         <div class="flex-content">
-            <p>Posters</p>
+            <h2>Posters</h2>
             <div class="posters">
-                <div>
-                    <img src="pictures/pic1.jpg" alt="">
+                <div class="cadre">
+                    <img class="img-cadre" src="pictures/pic1.jpg" alt="">
                 </div>
-                <div>
-                    <img src="pictures/pic2.jpg" alt="">
+                <div class="cadre">
+                    <img class="img-cadre" src="pictures/pic2.jpg" alt="">
                 </div>
-                <div>
-                    <img src="pictures/pic3.jpg" alt="">
+                <div class="cadre">
+                    <img class="img-cadre" src="pictures/pic3.jpg" alt="">
                 </div>
-                <div>
-                    <img src="pictures/pic4.jpg" alt="">
+                <div class="cadre">
+                    <img class="img-cadre" src="pictures/pic4.jpg" alt="">
                 </div>
-                <div>
-                    <img src="pictures/pic5.jpg" alt="">
+                <div class="cadre">
+                    <img class="img-cadre" src="pictures/pic5.jpg" alt="">
                 </div>
             </div>
-
             <br>
-            <p>Actors</p>
+
+            <h2>Actors</h2>
+
+            <div class="posters">
+                <div>
+                    <img class="actors" src="pictures/player456.png" alt="">
+                    <figcaption>Lee Jung-Jae</figcaption>
+                </div>
+                <div>
+                    <img class="actors" src="pictures/gameBoss.png" alt="">
+                    <figcaption>Lee Byung-hun</figcaption>
+                </div>
+                <div>
+                    <img class="actors" src="pictures/player222.png" alt="">
+                    <figcaption> Jo Yu-ri</figcaption>
+                </div>
+                <div>
+                    <img class="actors" src="pictures/player.png" alt="">
+                    <figcaption>Lee Yoo-mi</figcaption>
+                </div>
+                <div>
+                    <img class="actors" src="pictures/detective.png" alt="">
+                    <figcaption>Wi Ha-joon </figcaption>
+                </div>
+            </div>
 
         </div>
 
     </div>
+
+
 
 </body>
 
