ajouter qlqs changement

--- a/frontend-4/home_page.html
+++ b/frontend-4/home_page.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boutique Apple</title>
+    <title>AppleZone</title>
 
     <!------------------------------------  import --------------------------------------------->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="boutique.html">
 
 </head>
 
@@ -16,7 +17,7 @@
     <nav>
         <div class="logo">
             <i class="fa-brands fa-apple"></i>
-            <p>Boutique Apple</p>
+            <p>AppleZone</p>
             <a href="">iPhone</a>
             <a href="">MacBook</a>
             <a href="">Apple watch</a>
@@ -24,11 +25,26 @@
             <a href="">iPad</a>
         </div>
 
-        <div class="Register">
+        <div class="register">
             <button>Login</button>
-            <button>Sgn Up</button>
+            <button>Sign Up</button>
         </div>
     </nav>
+
+    <div class="welcome-div">
+        <h1>Bienvenus Chez AppleZone 🍏</h1>
+        <p>Votre destination incontournable pour découvrir l'univers Apple.
+            iPhone, MacBook, iPad, AirPods, Apple Watch…
+            Tous les produits authentiques et innovants réunis au même endroit.
+
+            Profitez de la qualité Apple avec un service client dédié, des offres exclusives,et une expérience d’achat
+            simple, rapide et sécurisée.
+
+            🔍 Explorez. 💼 Achetez. 💫 Vivez l’expérience Apple.
+        </p>
+
+        <button onclick="window.open('boutique.html', '_blank' )">Explorez Notre Boutique</button>
+    </div>
 
 </body>
 
