--- a/frontend-4/iPhone.html
+++ b/frontend-4/iPhone.html
@@ -5,9 +5,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhones</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="iPhone.css">
 </head>
 
 <body>
+    <nav>
+        <div class="logo">
+            <i class="fa-brands fa-apple"></i>
+            <p>AppleZone</p>
+            <a href="">iPhone</a>
+            <a href="">MacBook</a>
+            <a href="">Apple watch</a>
+            <a href="">AirPods</a>
+            <a href="">iPad</a>
+        </div>
+
+        <div class="search">
+            <input type="text" placeholder="search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+
+    </nav>
+    <div class="grid-iphones">
+        <div class="product">
+            <div>
+                <img src="pictures/iPhone 15.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/iphone_15_pro.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/iPhone_15_pro_max.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/iPhone_14.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/IPhone 14 Pro.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/iPhone_14_pro_max.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?</p>
+        </div>
+
+    </div>
 
 </body>
 
