--- a/frontend-4/iPhone.html
+++ b/frontend-4/iPhone.html
@@ -36,7 +36,8 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
                 fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
-                omnis?</p>
+                omnis?
+            </p>
         </div>
 
         <div class="product">
@@ -46,7 +47,8 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
                 fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
-                omnis?</p>
+                omnis?
+            </p>
         </div>
 
         <div class="product">
@@ -56,7 +58,8 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
                 fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
-                omnis?</p>
+                omnis?
+            </p>
         </div>
 
         <div class="product">
@@ -66,7 +69,8 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
                 fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
-                omnis?</p>
+                omnis?
+            </p>
         </div>
 
         <div class="product">
@@ -76,12 +80,46 @@
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
                 fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
-                omnis?</p>
+                omnis?
+            </p>
         </div>
 
         <div class="product">
             <div>
                 <img src="pictures/iPhone_14_pro_max.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?
+            </p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/Apple_13_pro_max.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?
+            </p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/iPhone_13_pro.jpg" alt="">
+            </div>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
+                fugit perspiciatis deleniti, natus quas! Earum dolores, nobis dolor eius facere cum voluptate veniam
+                omnis?
+            </p>
+        </div>
+
+        <div class="product">
+            <div>
+                <img src="pictures/Apple_iPhone_13.jpg" alt="">
             </div>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore rem incidunt eos deserunt earum non
