ajouter about-us

--- a/frontend-4/home_page.html
+++ b/frontend-4/home_page.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+
+    <!--------------------------------  Welcome Page ---------------------------------->
+
     <nav class="navbar">
         <div class="navbar-left">
             <i class="fa-brands fa-apple"></i>
@@ -47,9 +50,12 @@
 
                 🔍 Explorez. 💼 Achetez. 💫 Vivez l’expérience Apple.
             </p>
-            <button onclick="location.href='#'">Qui sommes-nous ?</button>
+            <button onclick="location.href='#about-us'">Qui sommes-nous ?</button>
         </div>
     </div>
+
+    <!--------------------------------  Nos services ---------------------------------->
+
 
     <h1 id="our-services">Nos Services</h1>
 
@@ -91,6 +97,9 @@
         </div>
 
     </div>
+
+    <!--------------------------------  Nos Produits ---------------------------------->
+
 
     <div id="boutique" class="nos-produits">
         <h1>Dans Notre Boutique</h1>
@@ -161,6 +170,7 @@
 
     </div>
 
+    <!--------------------------------  Promotion ---------------------------------->
 
     <h1 id="promotion"> Produit en Promotion</h1>
 
@@ -227,15 +237,53 @@
         </div>
     </div>
 
-    <h1 id="about-us">Qui sommes-nous ?</h1>
-    <div>
 
+    <!--------------------------------  Qui Sommmes-nous ? ---------------------------------->
+
+
+    <h1 id="about-us">Qui sommes-nous ?</h1>
+    <div class="aboutus-flex">
+        <div class="aboutus-img">
+            <img src="pictures/boutique_phone.jpg" alt="">
+        </div>
+
+        <div class="aboutus-describ">
+            <h1>AppleZone</h1>
+            <p>
+                AppleZone est spécialisée dans la vente de produits Apple authentiques : iPhone, iPad, Mac,
+                AirPods, Apple Watch et accessoires.
+            </p>
+
+            <p>
+                Nous proposons une sélection rigoureuse de produits Apple, neufs ou en excellent état, avec un excellent
+                rapport qualité/prix.
+            </p>
+
+            <p>
+                Notre mission ? Vous offrir un service fiable, rapide et transparent avec :
+            </p>
+
+            <ul>
+                <li>🚚 Livraison gratuite dans les 58 wilayas</li>
+                <li>🎁 Des offres spéciales toute l’année</li>
+                <li>✅ Des produits 100 % d’origine Apple</li>
+            </ul>
+
+            <p>
+                Passionnés par la technologie et attentifs à vos besoins, nous mettons tout en œuvre pour garantir votre
+                satisfaction à chaque commande. 🍏
+            </p>
+        </div>
     </div>
 
 
+
+
+    <!--------------------------------------------  Footer ------------------------------------------------>
+
     <footer id="contact">
         <p>&copy; 2025 AppleZone. Tous droits réservés.</p>
-        <p>Contact : support@applezone.com | +213 6 99 88 77 66</p>
+        <p>Contact : support@applezone.com | +213 0 00 00 00</p>
     </footer>
 
 
